--- a/package.json
+++ b/package.json
@@ -10,15 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.4",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.8",
+    "geolib": "^3.3.4",
+    "json-server": "^1.0.0-beta.3",
+    "lodash.debounce": "^4.0.8",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-bootsplash": "^6.1.5",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-maps": "^1.18.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-redux": "^9.1.2",
