chore: added date fns, toast messages and enable google maps in react native maps in ios

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,6 +47,9 @@ end
 target 'SakayApp' do
   config = use_native_modules!
 
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-google-maps', :path => rn_maps_path
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
