--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.2.8",
+    "date-fns": "^4.1.0",
     "geolib": "^3.3.4",
     "json-server": "^1.0.0-beta.3",
     "lodash.debounce": "^4.0.8",
@@ -30,6 +31,7 @@
     "react-native-reanimated": "^3.15.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
